#
# This file is protected by Copyright. Please refer to the COPYRIGHT file 
# distributed with this source distribution.
# 
# This file is part of REDHAWK core.
# 
# REDHAWK core is free software: you can redistribute it and/or modify it under 
# the terms of the GNU Lesser General Public License as published by the Free 
# Software Foundation, either version 3 of the License, or (at your option) any 
# later version.
# 
# REDHAWK core is distributed in the hope that it will be useful, but WITHOUT 
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS 
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more
# details.
# 
# You should have received a copy of the GNU Lesser General Public License 
# along with this program.  If not, see http://www.gnu.org/licenses/.
#

# vim: noet: softtabstop=0
acdir = $(datadir)/aclocal/ossie
dist_ac_DATA = \
    AC_CHECK_PYMODULE.m4 \
    AC_CORBA_IDLCOS.m4 \
    AC_CORBA_OMNIEVENTS.m4 \
    AC_CORBA_OMNI_PLATFORM.m4 \
    AC_CORBA_ORB.m4 \
    AC_CORBA_ORB_OMNIORB3.m4 \
    AC_CORBA_ORB_OMNIORB4.m4 \
    AC_CORBA_SEARCHDIRS.m4 \
    AC_CXX_BOOL.m4 \
    AC_CXX_CLEAN_TEMPLATE_REPOSITORY.m4 \
    AC_CXX_COMPILE_OBJ.m4 AC_CXX_HAVE_STL.m4 \
    AC_CXX_IDENTITY.m4 \
    AC_CXX_NAMESPACES.m4 \
    AC_CXX_PIC_FLAG.m4 \
    AC_CXX_STD.m4 \
    AC_CXX_TEMPLATE_REPOSITORY.m4 \
    AC_FUNC_SIGSET.m4 \
    AC_HAVE_XERCES_C.m4 \
    AC_PROG_CXX_AR.m4 \
    AC_PROG_CXX_LINK_SO_LIB.m4 \
    AC_PROG_OMNIIDL.m4 \
    ACX_PTHREAD.m4 \
    ax_boost_base.m4 \
    ax_boost_regex.m4 \
    ax_boost_thread.m4 \
    ax_boost_filesystem.m4 \
    ax_boost_serialization.m4 \
    ax_boost_system.m4 \
    ETR_SOCKET_NSL.m4 \
    grlab.m4 \
    java.m4 \
    ossie.m4 \
    pkg.m4 \
    AC_M_FUNCTION_INTEGRATION.m4 \
    rhpkg.m4
