#
# This file is protected by Copyright. Please refer to the COPYRIGHT file 
# distributed with this source distribution.
# 
# This file is part of REDHAWK core.
# 
# REDHAWK core is free software: you can redistribute it and/or modify it under 
# the terms of the GNU Lesser General Public License as published by the Free 
# Software Foundation, either version 3 of the License, or (at your option) any 
# later version.
# 
# REDHAWK core is distributed in the hope that it will be useful, but WITHOUT 
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS 
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for more
# details.
# 
# You should have received a copy of the GNU Lesser General Public License 
# along with this program.  If not, see http://www.gnu.org/licenses/.
#

SUBDIRS = sdr/dev/devices/ExecutableDevice \
          sdr/dev/devices/BasicTestDevice_cpp/BasicTestDevice_cpp_impl1 \
          sdr/dev/devices/BasicDevWithExecParam_cpp/BasicDevWithExecParam_cpp_impl1 \
          sdr/dev/devices/SimpleDevice/SimpleDevice_cpp_impl1 \
          sdr/dev/devices/props_test_device/props_test_device_cpp_impl1 \
          sdr/dev/devices/issue_111_cpp/cpp \
          sdr/dom/components/TestCppProps \
          sdr/dom/components/linkedLibraryTest \
          sdr/dom/components/TestCppsoftpkgDeps \
          sdr/dom/components/BasicAC/BasicAC_cpp_impl1 \
          sdr/dom/components/SimpleComponent/SimpleComponent_cpp_impl1 \
          sdr/dom/components/MessageReceiverCpp \
          sdr/dom/components/MessageSenderCpp \
          sdr/dom/components/PropertyChangeEventsCpp \
          sdr/dom/components/ticket2093/cpp \
          sdr/dom/components/TestAllPropTypes/cpp

if HAVE_JAVASUPPORT
SUBDIRS += sdr/dev/devices/BasicTestDevice_java/java \
           sdr/dev/devices/issue_111_java/java \
           sdr/dom/components/BasicAC/basicac_java_impl1 \
           sdr/dom/components/EventSend/EventSend_java_impl1 \
           sdr/dom/components/EventReceive/EventReceive_java_impl1 \
           sdr/dom/components/javaDep/javaDep \
           sdr/dom/components/HardLimit/HardLimit_java_impl1 \
           sdr/dom/components/PropertyChangeEventsJava/PropertyChangeEventsJava_java_impl1 \
           sdr/dom/components/TestJavaProps \
           sdr/dom/components/TestAllPropTypes/java

endif
